[package]
name = "spawn-bitmath"
version = "0.1.0"
authors = ["nzengi <zenginureddin1>"]
edition = "2018"
description = "A BitMath library optimized for Ethereum projects, implemented in Rust."
license = "MIT"
repository = "https://github.com/nzengi/spawn-bitmath"
readme = "README.md"
keywords = ["bitmath", "ethereum", "rust", "wasm"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.2"


